Sistema de avatares completo, casi todos los juegos